@@ -57,18 +57,10 @@ class MediaWiki {
 	}
 
 	function checkMaxLag( $maxLag ) {
-		global $wgLoadBalancer, $wgShowHostnames;
+		global $wgLoadBalancer;
 		list( $host, $lag ) = $wgLoadBalancer->getMaxLag();
 		if ( $lag > $maxLag ) {
-			header( 'HTTP/1.1 503 Service Unavailable' );
-			header( 'Retry-After: ' . max( intval( $maxLag ), 5 ) );
-			header( 'X-Database-Lag: ' . intval( $lag ) );
-			header( 'Content-Type: text/plain' );
-			if( $wgShowHostnames ) {
-				echo "Waiting for $host: $lag seconds lagged\n";
-			} else {
-				echo "Waiting for a database server: $lag seconds lagged\n";
-			}
+			wfMaxlagError( $host, $lag, $maxLag );
 			return false;
 		} else {
 			return true;
