@@ -57,7 +57,7 @@ class ApiRender extends ApiBase {
 		// Return result
 		$result = $this->getResult();
 		if( $this->isRaw() ) {
-			ApiFormatRaw :: setRawData( $result, $retval );
+			ApiFormatRaw :: setRawData( $result, $retval, 'text/html' );
 		}
 		$retval_array = array();
 		$result->setContent( $retval_array, $retval );
